# tutti

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  VERSIONING.md  tutti.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  sdlc-orchestrator.yml
.gstack/qa-reports/: qa-report-localhost-4040-2026-03-21.md
clawhub/tutti/: CHANGELOG.md  SKILL.md  action-contract.json  tutti_openclaw.py
dashboard/: app.js  index.html  style.css  test.html
docs/: AGENT_INTEGRATION_CONTRACT.md  AGENT_OPS_ROADMAP.md  CODEX_SDLC_ORCHESTRATION.md  OPENCLAW_SKILL_CONTRACT.md  OPERATOR_DEBUGGING.md  REMOTE_DASHBOARD_VISUAL_DIRECTION.md  REMOTE_DEMO_SCRIPT.md  V0.2_LEVERAGE_CHECKLIST.md  V0.5_ISSUE_BREAKDOWN.md  V0.5_OBSERVABILITY_PLAN.md  infographic-github.html  infographic.html  pr-review-loop.md
docs/examples/: tutti-codex-sdlc.toml
integrations/openclaw/: README.md  action-contract.json  tutti_openclaw.py
plans/issue-kickoff/: issue-28.md  issue-30.md  issue-35.md  issue-37.md  issue-40.md  issue-41.md
scripts/automation/: collect_coderabbit_feedback.sh  create_issue_branch.sh  open_or_create_pr.py  release_claim.sh  select_issue.sh  sweep_stale_claims.sh  verify_branch_has_changes.py  verify_clean_baseline.sh  wait_and_collect_coderabbit.py  wait_coderabbit.sh  write_implement_result.py
skills/openclaw/: SKILL.md
src/: dashboard.rs  error.rs  main.rs  webhook.rs
src/auth/: identity.rs  mod.rs  rbac.rs
src/automation/: mod.rs
src/budget/: mod.rs
src/claim/: mod.rs
src/cli/: agent_ref.rs  attach.rs  detect.rs  diff.rs  doctor.rs  down.rs  handoff.rs  health.rs  init.rs  issue_claim.rs  land.rs  logs.rs  mod.rs  peek.rs  permissions.rs  remote.rs  review.rs  run.rs  runs.rs  send.rs  serve.rs  snapshot.rs  status.rs  switch.rs  up.rs  upload.rs  usage.rs  verify.rs  watch.rs  workspaces.rs
src/config/: defaults.rs  mod.rs
src/health/: mod.rs
src/identity/: rbac.rs
src/permissions/: mod.rs
src/runtime/: aider.rs  claude_code.rs  codex.rs  mod.rs  openclaw.rs
src/scheduler/: mod.rs
src/session/: mod.rs  tmux.rs
src/state/: mod.rs
src/template/: mod.rs
src/usage/: mod.rs
src/worktree/: mod.rs
templates/: gstack-startup.toml  minimal.toml  rust-cli.toml
tests/: sdlc_auto_dry_run_integration.rs  send_auto_up_integration.rs
tests/fixtures/runtime/: aider_idle_prompt.txt  codex_rate_limit.txt  (+9 more)
