[package]
name = "tutti"
version = "0.1.0"
edition = "2024"
description = "Multi-agent orchestration CLI — your agents, all together"
license = "MIT"
repository = "https://github.com/nutthouse/tutti"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
comfy-table = "7"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
