[package]
name = "tutti"
version = "0.4.0"
edition = "2024" # intentional: codebase uses Rust 2024 let-chain syntax
description = "Multi-agent orchestration CLI — your agents, all together"
license = "MIT"
repository = "https://github.com/nutthouse/tutti"
homepage = "https://github.com/nutthouse/tutti"
keywords = ["cli", "ai", "agents", "orchestration", "tmux"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
comfy-table = "7"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
ratatui = "0.30"
crossterm = "0.29"
fuzzy-matcher = "0.3"
wait-timeout = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "signal", "macros"] }
cron = "0.12"
tiny_http = "0.12"
getrandom = "0.4.2"

[dev-dependencies]
serial_test = "3"
